--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,7 +28,7 @@ set(SOURCE_FILES
     src/safealloc.h)
 
 # Wskazujemy plik wykonywalny.
-add_executable(poly_example.c ${SOURCE_FILES})
+add_executable(poly_example ${SOURCE_FILES})
 
 # Dodajemy obsługę Doxygena: sprawdzamy, czy jest zainstalowany i jeśli tak to:
 find_package(Doxygen)
