Some changes in doxygen documentation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,14 +21,18 @@ set(CMAKE_C_FLAGS "-std=c11 -Wall -Wextra")
 
 # Wskazujemy pliki źródłowe.
 set(SOURCE_FILES
-        src/safe_alloc.c
-        src/safe_alloc.h
+    src/safe_alloc.c
+    src/safe_alloc.h
     src/poly.c
     src/poly.h
-    src/calc.c
-    src/calc.h
     src/poly_stack.c
-    src/poly_stack.h src/parsing.c src/parsing.h src/mono_stack.c src/mono_stack.h)
+    src/poly_stack.h
+    src/mono_stack.c
+    src/mono_stack.h
+    src/parsing.c
+    src/parsing.h
+    src/calc.c
+    src/calc.h)
 
 #set(EXTENSION_PATH "${CMAKE_CURRENT_SOURCE_DIR}/src/testy-duze-zadanie-1/CMakeExtension.txt")
 #if (EXISTS "${EXTENSION_PATH}")
