--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 .idea
 cmake-build-debug
 cmake-build-release
-src/testy-duze-zadanie-1
 debug
 release
+src/testy-duze-zadanie-1
+src/testy-duze-zadanie-2
+examples
+my_examples
+scripts
