Initial third part commit

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@ debug
 release
 src/testy-duze-zadanie-1
 src/testy-duze-zadanie-2
+src/testy-duze-zadanie-3
 src/examples
 src/my_examples
 src/scripts
+uwagi_andrzeja
