--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,6 +37,14 @@ set(SOURCE_FILES
 # Wskazujemy plik wykonywalny.
 add_executable(poly ${SOURCE_FILES})
 
+# Wskazujemy pliki źródłowe testów.
+set(TEST_SOURCE_FILES
+        src/example_test.c)
+
+# Wskazujemy plik wykonywalny testów biblioteki.
+add_executable(test EXCLUDE_FROM_ALL ${TEST_SOURCE_FILES})
+set_target_properties(test PROPERTIES OUTPUT_NAME poly_test)
+
 # Dodajemy obsługę Doxygena: sprawdzamy, czy jest zainstalowany i jeśli tak to:
 find_package(Doxygen)
 if (DOXYGEN_FOUND)
